--- a/app/components/templates/CVOne.html
+++ b/app/components/templates/CVOne.html
@@ -5,7 +5,8 @@
     <style>
       :root {
         /* Colors */
-        --primary: #6366f1;
+        --primary: {{colorPalette}};
+        /* --primary: #0f172a; */
         --dark: #0f172a;
         --text: #334155;
         --text-light: #64748b;
@@ -24,7 +25,11 @@
 
       /* Base styles */
       body {
-        font-family: "Inter", system-ui, -apple-system, sans-serif;
+        font-family:
+          "Inter",
+          system-ui,
+          -apple-system,
+          sans-serif;
         margin: 0;
         background: var(--background);
         color: var(--text);
@@ -69,6 +74,35 @@
         font-size: var(--text-xl);
         font-weight: 600;
         margin: 0;
+      }
+
+      .personal-info {
+        margin-top: 1.5rem;
+      }
+
+      .personal-info h1 {
+        font-size: var(--text-2xl);
+        font-weight: 600;
+        color: var(--dark);
+        margin: 0 0 0.5rem 0;
+      }
+
+      .contact-info {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        color: var(--primary);
+      }
+
+      .contact-item {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+      }
+
+      .contact-icon {
+        width: 1rem;
+        height: 1rem;
       }
 
       /* Main Content Layout */
@@ -232,17 +266,52 @@
   <body>
     <div class="page">
       <div class="header">
+        {{#if showCompanyInfo}}
         <div class="company-header">
           <img src="{{logoUrl}}" alt="Company Logo" />
           <h2>{{companyName}}</h2>
         </div>
-        <!-- <div class="personal-info">
+        {{/if}} {{#if showPersonalInfo}}
+        <div class="personal-info">
           <h1>{{firstName}} {{lastName}}</h1>
           <div class="contact-info">
-            <p>{{email}}</p>
-            <p>{{phone}}</p>
+            <span class="contact-item">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="contact-icon"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="1.5"
+                  d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                />
+              </svg>
+              {{email}}
+            </span>
+            <span class="contact-item">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="contact-icon"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="1.5"
+                  d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
+                />
+              </svg>
+              {{phone}}
+            </span>
           </div>
-        </div> -->
+        </div>
+        {{/if}}
       </div>
 
       <div class="main-content">
@@ -373,6 +442,7 @@
           {{/if}} {{#if languages}}
           <div class="section">
             <h2>Languages</h2>
+            <!-- <h2 style="color: {{colorPalette}}">Languages</h2> -->
             <div class="languages-list">
               {{#each languages}}
               <div class="language-item">
@@ -388,7 +458,7 @@
             <div class="social-links">
               {{#each socials}}
               <a href="{{url}}" target="_blank" rel="noopener noreferrer"
-                >{{name}}</a
+                >{{url}}</a
               >
               {{/each}}
             </div>
@@ -412,6 +482,9 @@
       const data = {
         logoUrl: "https://placehold.co/100x100",
         companyName: "Arrow Agency",
+        showPersonalInfo: true,
+        showCompanyInfo: true,
+        colorPalette: "#f10000",
         firstName: "John",
         lastName: "Doe",
         email: "john.doe@example.com",
