--- a/app/components/templates/CVTwo.html
+++ b/app/components/templates/CVTwo.html
@@ -5,8 +5,12 @@
     <style>
       :root {
         /* Colors */
-        --primary: #0ea5e9;
-        --primary-light: #e0f2fe;
+        --primary: rgb(234, 88, 12);
+        --secondary: 234, 88, 12;
+        --primary-light: rgba(var(--secondary), 0.1);
+        /* --primary: {{colorPalette}};
+        --secondary: {{secondaryColorPalette}};
+        --primary-light: rgba(var(--secondary), 0.1); */
         --dark: #0f172a;
         --text: #334155;
         --text-light: #64748b;
@@ -51,6 +55,31 @@
         align-items: center;
         gap: 1rem;
         margin-bottom: 1.5rem;
+      }
+
+      .personal-info {
+        padding-left: 2rem;
+        padding-right: 2rem;
+        padding-bottom: 2rem;
+        padding-top: 0.5rem;
+        border-radius: 0.5rem;
+        margin-bottom: 2rem;
+        background-color: var(--primary-light);
+      }
+
+      .contact-info {
+        color: var(--primary);
+      }
+
+      .contact-item {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+      }
+
+      .contact-icon {
+        width: 1rem;
+        height: 1rem;
       }
 
       .company-header img {
@@ -249,16 +278,58 @@
   <body>
     <div class="page">
       <div class="header">
+        {{#if showCompanyInfo}}
         <div class="company-header">
           <img src="{{logoUrl}}" alt="Company Logo" />
           <h2>{{companyName}}</h2>
         </div>
+        {{/if}}
       </div>
 
       <div class="main-content">
         <!-- Left Column -->
         <div class="left-column">
-          {{#if summary}}
+          {{#if showPersonalInfo}}
+          <div class="personal-info">
+            <h1>{{firstName}} {{lastName}}</h1>
+            <div class="contact-info">
+              <span class="contact-item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="contact-icon"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="1.5"
+                    d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                  />
+                </svg>
+                {{email}}
+              </span>
+              <span class="contact-item">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="contact-icon"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="1.5"
+                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
+                  />
+                </svg>
+                {{phone}}
+              </span>
+            </div>
+          </div>
+          {{/if}} {{#if summary}}
           <div class="section">
             <p class="item-content">{{summary}}</p>
           </div>
@@ -398,7 +469,7 @@
             <div class="social-links">
               {{#each socials}}
               <a href="{{url}}" target="_blank" rel="noopener noreferrer"
-                >{{name}}</a
+                >{{url}}</a
               >
               {{/each}}
             </div>
@@ -424,6 +495,11 @@
         companyName: "Arrow Agency",
         firstName: "John",
         lastName: "Doe",
+        showPersonalInfo: true,
+        showCompanyInfo: false,
+        colorPalette: "rgb(234, 88, 12)",
+        secondaryColorPalette: "234, 88, 12",
+
         email: "john.doe@example.com",
         phone: "+1 234 567 8900",
         summary:
