--- a/app/components/templates/CVOne.html
+++ b/app/components/templates/CVOne.html
@@ -5,7 +5,7 @@
     <style>
       :root {
         /* Colors */
-        --primary: {{colorPalette}};
+        --primary: {{primaryColor}};
         /* --primary: #0f172a; */
         --dark: #0f172a;
         --text: #334155;
@@ -484,7 +484,7 @@
         companyName: "Arrow Agency",
         showPersonalInfo: true,
         showCompanyInfo: true,
-        colorPalette: "#f10000",
+        primaryColor: "#f10000",
         firstName: "John",
         lastName: "Doe",
         email: "john.doe@example.com",
