Fixing project null values

--- a/app/components/templates/CVThree.html
+++ b/app/components/templates/CVThree.html
@@ -353,7 +353,7 @@
           <div class="social-links">
             {{#each socials}}
             <a
-              href="{{#if (startsWith url 'http')}}{{url}}{{else}}https://{{url}}{{/if}}"
+              href="{{url}}"
               target="_blank"
               rel="noopener noreferrer"
               class="social-link"
